--- a/estoque/src/main/resources/application-test.yml
+++ b/estoque/src/main/resources/application-test.yml
@@ -2,6 +2,8 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     platform: test
+    initialization-mode: always
+
 mybatis:
   type-aliases-package: com.dilsonjlrjr.mateus.estoque.model
   type-handlers-package: com.dilsonjlrjr.mateus.estoque.model.typehandler
