--- a/estoque/src/main/resources/application-develop.yml
+++ b/estoque/src/main/resources/application-develop.yml
@@ -1,3 +1,9 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
+    schema:
+      - classpath:schema-develop.sql
+mybatis:
+  type-aliases-package: com.dilsonjlrjr.mateus.estoque.model
+  type-handlers-package: com.dilsonjlrjr.mateus.estoque.model.typehandler
+  mapper-locations: classpath*:**/mappers/*Mapper.xml
